# gpt-oss-20b-redteam

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
findings/: F1.example.json
toolkit/: pyproject.toml
toolkit/src/gptoss20b_redteam_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
toolkit/src/toolkit/: __init__.py  assertions.py  repro.py
toolkit/tests/: test_schema.py
